5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1745_3088.log
== TEST (2019-05-15 14:28:59) 
-- CODE:
num = (int(input("digite um nume: ")))
while(num!=0):
	if
-- ERROR:
File "XXXX", line 3
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:02) 
-- CODE:
num = (int(input("digite um nume: ")))
while(num!=0):

-- ERROR:
File "XXXX", line 3
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
